@@ -1,19 +1,10 @@
 package com.example.marketplace.service;
 
-import com.example.marketplace.model.Order;
-import com.example.marketplace.model.Product;
-import com.example.marketplace.model.User;
-import com.example.marketplace.model.Notification;
-import com.example.marketplace.model.Review;
-import com.example.marketplace.repository.OrderRepository;
-import com.example.marketplace.repository.ProductRepository;
-import com.example.marketplace.repository.UserRepository;
-import com.example.marketplace.repository.NotificationRepository;
-import com.example.marketplace.repository.ReviewRepository;
-
+import com.example.marketplace.dto.SalesReportDTO;
+import com.example.marketplace.model.*;
+import com.example.marketplace.repository.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.mongodb.core.MongoTemplate;
 import org.springframework.stereotype.Service;
@@ -21,11 +12,8 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -39,42 +27,44 @@ public class OrderService {
     @Autowired
     private NotificationRepository notificationRepository;
     @Autowired
-    private ReviewRepository reviewRepository;
-    @Autowired
     private MongoTemplate mongoTemplate;
+    @Autowired
+    private PromotionService promotionService;
+
+    // @review: Priority Matrix Implementation
+    // Priority 1: User-selected Promotion (Highest priority if explicitly chosen)
+    // Priority 2: Admin Promotion (Auto-applied fallback)
+    // Priority 3: Welcome Promotion (System-generated for first-time buyers)
+    private PromotionService.AppliedPromotion resolveBestPromotion(String userId, List<String> sellerIds, BigDecimal subtotal, String selectedPromotionId) {
+        // 1. Apply User Selected Promotion (Highest and only manual priority)
+        if (selectedPromotionId != null && !selectedPromotionId.isEmpty()) {
+            return promotionService.applyPromotion(selectedPromotionId, subtotal, userId);
+        }
+
+        // 2. Fallback to Welcome Promo ONLY if it's the first purchase
+        // Admin promotions are no longer auto-applied; users must select them manually.
+        if (promotionService.isFirstPurchase(userId)) {
+            return promotionService.applyPromotion("WELCOME_PROMO", subtotal, userId);
+        }
+
+        return new PromotionService.AppliedPromotion(null, null, BigDecimal.ZERO);
+    }
 
     public Order placeSingleOrder(String email, String productId, int quantity, String shippingAddress,
-            String buyerName, String buyerPhone) {
-        System.out.println("Placing single order for buyer: " + email + ", product: " + productId);
-
-        Product product = productRepository.findById(productId).orElse(null);
-        if (product == null) {
-            throw new RuntimeException("Product not found: " + productId);
-        }
+            String buyerName, String buyerPhone, String selectedPromotionId) {
         
-        // Handle missing sellerId for older products
-        if (product.getSellerId() == null && product.getShopId() != null) {
-            userRepository.findByShopId(product.getShopId()).ifPresent(u -> {
-                product.setSellerId(u.getEmail());
-                productRepository.save(product);
-            });
-        }
-
-        // Handle missing stockQuantity for older products
-        if (product.getStockQuantity() == null) {
-            product.setStockQuantity(100);
-            productRepository.save(product);
-        }
+        Product product = productRepository.findById(productId)
+                .orElseThrow(() -> new RuntimeException("Product not found"));
 
         if (product.getStockQuantity() < quantity) {
-            throw new RuntimeException("Insufficient stock. Available: " + product.getStockQuantity());
+            throw new RuntimeException("Insufficient stock");
         }
 
-        if (product.getPrice() == null) {
-            product.setPrice(BigDecimal.ZERO);
-        }
-
-        BigDecimal totalPrice = product.getPrice().multiply(new BigDecimal(quantity));
+        BigDecimal subtotal = product.getPrice().multiply(new BigDecimal(quantity));
+        
+        // Resolve Promotion based on priority matrix
+        PromotionService.AppliedPromotion applied = resolveBestPromotion(email, Collections.singletonList(product.getSellerId()), subtotal, selectedPromotionId);
+        BigDecimal totalPrice = subtotal.subtract(applied.getDiscountAmount());
 
         Order order = Order.builder()
                 .buyerId(email)
@@ -88,30 +78,101 @@ public class OrderService {
                         .quantity(quantity)
                         .build()))
                 .productName(product.getName())
-                .productImage(product.getImages() != null && !product.getImages().isEmpty() ? product.getImages().get(0) : null)
                 .totalPrice(totalPrice)
                 .shippingAddress(shippingAddress)
                 .status("PENDING")
                 .createdAt(LocalDateTime.now())
                 .updatedAt(LocalDateTime.now())
+                // Store applied promotion directly on the order (replaces user_promotion_usage)
+                .appliedPromotionId(applied.getPromotionId())
+                .appliedPromotionName(applied.getPromotionName())
+                .discountAmount(applied.getDiscountAmount())
                 .build();
 
-        // Deduct stock
+        // Update stock
         product.setStockQuantity(product.getStockQuantity() - quantity);
-        if (product.getStockQuantity() == 0) {
-            product.setStatus("SOLD");
-        }
+        if (product.getStockQuantity() == 0) product.setStatus("SOLD");
         productRepository.save(product);
 
         order.initTracking();
         Order saved = orderRepository.save(order);
+
+        // Increment global usage counter on the Promotion document
+        promotionService.incrementPromotionUsageCounter(applied.getPromotionId());
+
+        notifySellers(saved);
+        return saved;
+    }
+
+    public Order placeOrderFromWishlist(String email, String shippingAddress, String selectedPromotionId) {
+        User user = userRepository.findByEmail(email)
+                .orElseThrow(() -> new RuntimeException("User not found"));
+        Set<String> wishlist = user.getWishlist();
+        if (wishlist == null || wishlist.isEmpty()) {
+            throw new RuntimeException("Wishlist is empty");
+        }
+
+        List<Product> products = productRepository.findByIdIn(new ArrayList<>(wishlist));
+        List<Order.OrderItem> orderItems = new ArrayList<>();
+        BigDecimal subtotal = BigDecimal.ZERO;
+        List<String> sellerIds = new ArrayList<>();
+        String firstProductImage = null;
+
+        for (Product p : products) {
+            if (p.getStockQuantity() != null && p.getStockQuantity() >= 1) {
+                orderItems.add(Order.OrderItem.builder()
+                        .productId(p.getId())
+                        .name(p.getName())
+                        .price(p.getPrice())
+                        .quantity(1)
+                        .build());
+                subtotal = subtotal.add(p.getPrice());
+                if (p.getSellerId() != null) sellerIds.add(p.getSellerId());
+                if (firstProductImage == null && p.getImages() != null && !p.getImages().isEmpty()) 
+                    firstProductImage = p.getImages().get(0);
+                
+                p.setStockQuantity(p.getStockQuantity() - 1);
+                if (p.getStockQuantity() == 0) p.setStatus("SOLD");
+                productRepository.save(p);
+            }
+        }
+
+        // Resolve Promotion
+        PromotionService.AppliedPromotion applied = resolveBestPromotion(email, sellerIds, subtotal, selectedPromotionId);
+        BigDecimal totalPrice = subtotal.subtract(applied.getDiscountAmount());
+
+        Order order = Order.builder()
+                .buyerId(email)
+                .sellerId(sellerIds.isEmpty() ? null : sellerIds.get(0))
+                .items(orderItems)
+                .productName(orderItems.get(0).getName() + (orderItems.size() > 1 ? " & " + (orderItems.size()-1) + " others" : ""))
+                .productImage(firstProductImage)
+                .totalPrice(totalPrice)
+                .shippingAddress(shippingAddress)
+                .status("PENDING")
+                .createdAt(LocalDateTime.now())
+                .updatedAt(LocalDateTime.now())
+                // Store applied promotion directly on the order (replaces user_promotion_usage)
+                .appliedPromotionId(applied.getPromotionId())
+                .appliedPromotionName(applied.getPromotionName())
+                .discountAmount(applied.getDiscountAmount())
+                .build();
+
+        order.initTracking();
+        Order saved = orderRepository.save(order);
+
+        // Increment global usage counter on the Promotion document
+        promotionService.incrementPromotionUsageCounter(applied.getPromotionId());
+
+        user.getWishlist().clear();
+        userRepository.save(user);
+
         notifySellers(saved);
         return saved;
     }
 
     private void notifySellers(Order order) {
-        if (order.getSellerId() == null)
-            return;
+        if (order.getSellerId() == null) return;
         notificationRepository.save(Notification.builder()
                 .recipientId(order.getSellerId())
                 .senderId(order.getBuyerId())
@@ -124,284 +185,6 @@ public class OrderService {
                 .build());
     }
 
-    public Order acceptOrder(String orderId, String sellerEmail) {
-        Order order = orderRepository.findById(orderId)
-                .orElseThrow(() -> new RuntimeException("Order not found"));
-
-        if (!order.getSellerId().equals(sellerEmail)) {
-            throw new RuntimeException("Unauthorized");
-        }
-
-        order.setStatus("ACCEPTED");
-        order.setUpdatedAt(LocalDateTime.now());
-        Order savedOrder = orderRepository.save(order);
-
-        // Notify Buyer
-        notificationRepository.save(Notification.builder()
-                .recipientId(order.getBuyerId())
-                .senderId(sellerEmail)
-                .title("Order Accepted")
-                .message("Your order for " + order.getItems().get(0).getName() + " has been accepted by the seller.")
-                .type("ORDER_ACCEPTED")
-                .relatedId(order.getId())
-                .isRead(false)
-                .createdAt(LocalDateTime.now())
-                .build());
-
-        return savedOrder;
-    }
-
-    public Order declineOrder(String orderId, String sellerEmail) {
-        Order order = orderRepository.findById(orderId)
-                .orElseThrow(() -> new RuntimeException("Order not found"));
-
-        if (!order.getSellerId().equals(sellerEmail)) {
-            throw new RuntimeException("Unauthorized");
-        }
-
-        order.setStatus("DECLINED");
-        order.setUpdatedAt(LocalDateTime.now());
-        Order savedOrder = orderRepository.save(order);
-
-        // Notify Buyer
-        notificationRepository.save(Notification.builder()
-                .recipientId(order.getBuyerId())
-                .senderId(sellerEmail)
-                .title("Order Declined")
-                .message("Your order for " + order.getItems().get(0).getName() + " has been declined by the seller.")
-                .type("ORDER_DECLINED")
-                .relatedId(order.getId())
-                .isRead(false)
-                .createdAt(LocalDateTime.now())
-                .build());
-
-        return savedOrder;
-    }
-
-    public List<Order> getOrdersForSeller(String sellerEmail) {
-        System.out.println("Fetching orders for seller: " + sellerEmail);
-        List<Order> orders = orderRepository.findBySellerIdOrderByCreatedAtDesc(sellerEmail);
-        System.out.println("Found " + orders.size() + " orders for " + sellerEmail);
-        return orders;
-    }
-
-    public Order placeOrderFromWishlist(String email, String shippingAddress) {
-        System.out.println("Placing wishlist order for buyer: " + email);
-        User user = userRepository.findByEmail(email)
-                .orElseThrow(() -> new RuntimeException("User not found"));
-        Set<String> wishlist = user.getWishlist();
-        if (wishlist == null || wishlist.isEmpty()) {
-            throw new RuntimeException("Wishlist is empty");
-        }
-
-        // OPTIMIZATION: Batch fetch all products instead of individual queries
-        List<String> itemIds = new ArrayList<>(wishlist);
-        
-        // Batch fetch products
-        List<Product> allProducts = productRepository.findByIdIn(itemIds);
-        Map<String, Product> productMap = allProducts.stream()
-                .collect(java.util.stream.Collectors.toMap(Product::getId, p -> p));
-
-        List<Order.OrderItem> orderItems = new ArrayList<>();
-        BigDecimal totalPrice = BigDecimal.ZERO;
-        String firstSellerId = null;
-        String firstProductImage = null;
-        
-        // Track items to update for batch save
-        List<Product> productsToUpdate = new ArrayList<>();
-
-        for (String itemId : wishlist) {
-            // Check Product from map (no DB query)
-            Product product = productMap.get(itemId);
-            if (product != null) {
-                // Repair older products
-                if (product.getSellerId() == null && product.getShopId() != null) {
-                    java.util.Optional<User> shopOwner = userRepository.findByShopId(product.getShopId());
-                    if (shopOwner.isPresent()) {
-                        product.setSellerId(shopOwner.get().getEmail());
-                    }
-                }
-                if (product.getStockQuantity() == null) {
-                    product.setStockQuantity(100);
-                }
-
-                if (product.getStockQuantity() >= 1) {
-                    orderItems.add(Order.OrderItem.builder()
-                            .productId(itemId)
-                            .name(product.getName())
-                            .price(product.getPrice() != null ? product.getPrice() : BigDecimal.ZERO)
-                            .quantity(1)
-                            .build());
-                    totalPrice = totalPrice.add(product.getPrice() != null ? product.getPrice() : BigDecimal.ZERO);
-                    if (firstSellerId == null)
-                        firstSellerId = product.getSellerId();
-                    if (firstProductImage == null)
-                        firstProductImage = product.getImages() != null && !product.getImages().isEmpty() ? product.getImages().get(0) : null;
-
-                    // Deduct stock
-                    product.setStockQuantity(product.getStockQuantity() - 1);
-                    if (product.getStockQuantity() == 0)
-                        product.setStatus("SOLD");
-                    productsToUpdate.add(product);  // Track for batch save
-                }
-            }
-        }
-
-        if (orderItems.isEmpty()) {
-            throw new RuntimeException("No valid items found in wishlist or items are out of stock");
-        }
-
-        Order order = Order.builder()
-                .buyerId(email)
-                .sellerId(firstSellerId)
-                .items(orderItems)
-                .productName(orderItems.size() > 1
-                        ? orderItems.get(0).getName() + " & " + (orderItems.size() - 1) + " others"
-                        : orderItems.get(0).getName())
-                .productImage(firstProductImage)
-                .totalPrice(totalPrice)
-                .shippingAddress(shippingAddress)
-                .status("PENDING")
-                .createdAt(LocalDateTime.now())
-                .updatedAt(LocalDateTime.now())
-                .build();
-        
-        order.initTracking();
-
-        // OPTIMIZATION: Batch save products instead of individual saves
-        if (!productsToUpdate.isEmpty()) {
-            productRepository.saveAll(productsToUpdate);
-        }
-
-        // Clear wishlist
-        user.getWishlist().clear();
-        userRepository.save(user);
-
-        Order saved = orderRepository.save(order);
-        notifySellers(saved);
-        return saved;
-    }
-
-    public Order submitReview(String orderId, String buyerEmail, Integer rating, String review) {
-        Order order = orderRepository.findById(orderId)
-                .orElseThrow(() -> new RuntimeException("Order not found"));
-
-        if (!order.getBuyerId().equals(buyerEmail)) {
-            throw new RuntimeException("Only the buyer can review this order");
-        }
-
-        String productId = order.getItems().get(0).getProductId();
-
-        // Prevent duplicate reviews — update existing if it exists
-        java.util.Optional<Review> existing = reviewRepository.findByOrderId(orderId);
-        if (existing.isPresent()) {
-            // Delegate to edit path
-            return editReview(orderId, buyerEmail, rating, review);
-        }
-
-        order.setRating(rating);
-        order.setReview(review);
-        order.setUpdatedAt(LocalDateTime.now());
-        Order savedOrder = orderRepository.save(order);
-
-        // Save to the Review collection
-        Review reviewDoc = Review.builder()
-                .orderId(orderId)
-                .productId(productId)
-                .productName(order.getProductName())
-                .buyerId(buyerEmail)
-                .buyerName(order.getBuyerName())
-                .rating(rating)
-                .comment(review)
-                .createdAt(LocalDateTime.now())
-                .updatedAt(LocalDateTime.now())
-                .build();
-        reviewRepository.save(reviewDoc);
-
-        // Recalculate product rating from scratch
-        recalculateProductRating(productId);
-
-        return savedOrder;
-    }
-
-    public Order editReview(String orderId, String buyerEmail, Integer rating, String comment) {
-        Order order = orderRepository.findById(orderId)
-                .orElseThrow(() -> new RuntimeException("Order not found"));
-
-        if (!order.getBuyerId().equals(buyerEmail)) {
-            throw new RuntimeException("Unauthorized: only the buyer can edit this review");
-        }
-
-        String productId = order.getItems().get(0).getProductId();
-
-        // Update order fields
-        order.setRating(rating);
-        order.setReview(comment);
-        order.setUpdatedAt(LocalDateTime.now());
-        Order savedOrder = orderRepository.save(order);
-
-        // Update the Review document
-        Review reviewDoc = reviewRepository.findByOrderId(orderId)
-                .orElseGet(() -> Review.builder()
-                        .orderId(orderId)
-                        .productId(productId)
-                        .productName(order.getProductName())
-                        .buyerId(buyerEmail)
-                        .buyerName(order.getBuyerName())
-                        .createdAt(LocalDateTime.now())
-                        .build());
-
-        reviewDoc.setRating(rating);
-        reviewDoc.setComment(comment);
-        reviewDoc.setUpdatedAt(LocalDateTime.now());
-        reviewRepository.save(reviewDoc);
-
-        // Recalculate product rating from scratch
-        recalculateProductRating(productId);
-
-        return savedOrder;
-    }
-
-    public void deleteReview(String orderId, String buyerEmail) {
-        Order order = orderRepository.findById(orderId)
-                .orElseThrow(() -> new RuntimeException("Order not found"));
-
-        if (!order.getBuyerId().equals(buyerEmail)) {
-            throw new RuntimeException("Unauthorized: only the buyer can delete this review");
-        }
-
-        String productId = order.getItems().get(0).getProductId();
-
-        // Clear review fields on the order
-        order.setRating(null);
-        order.setReview(null);
-        order.setUpdatedAt(LocalDateTime.now());
-        orderRepository.save(order);
-
-        // Remove the Review document
-        reviewRepository.findByOrderId(orderId).ifPresent(reviewRepository::delete);
-
-        // Recalculate product rating from scratch
-        recalculateProductRating(productId);
-    }
-
-    private void recalculateProductRating(String productId) {
-        Product product = productRepository.findById(productId).orElse(null);
-        if (product == null) return;
-
-        // OPTIMIZATION: Calculate ratings efficiently
-        java.util.List<Review> reviews = reviewRepository.findByProductIdOrderByCreatedAtDesc(productId);
-        int count = reviews.size();
-        double average = reviews.stream()
-                .mapToInt(Review::getRating)
-                .average()
-                .orElse(0.0);
-
-        product.setReviewCount(count);
-        product.setAverageRating(count > 0 ? Math.round(average * 10.0) / 10.0 : 0.0);
-        productRepository.save(product);
-    }
-
     public List<Order> getMyOrders(String email) {
         return orderRepository.findByBuyerIdOrderByCreatedAtDesc(email);
     }
@@ -409,45 +192,101 @@ public class OrderService {
     public Page<Order> getAllOrders(Pageable pageable) {
         return orderRepository.findAll(pageable);
     }
-    
-    @Deprecated(forRemoval = true) // Use getAllOrders(Pageable) instead
+
+    // @review: Fix for AdminController missing overloaded method
     public List<Order> getAllOrders() {
-        // Return first 100 for backward compatibility
-        return orderRepository.findAll(PageRequest.of(0, 100)).getContent();
+        return orderRepository.findAll();
     }
 
-    public com.example.marketplace.dto.SalesReportDTO getSalesReport(String sellerId, LocalDateTime startDate, LocalDateTime endDate) {
-        List<Order> orders = orderRepository.findSellerSalesByDateRange(sellerId, startDate, endDate);
+    public Order acceptOrder(String orderId, String sellerId) {
+        Order order = orderRepository.findById(orderId)
+                .orElseThrow(() -> new RuntimeException("Order not found"));
         
+        if (!order.getSellerId().equals(sellerId)) {
+            throw new RuntimeException("Unauthorized: This order does not belong to you");
+        }
+        
+        order.setStatus("ACCEPTED");
+        order.setUpdatedAt(LocalDateTime.now());
+        return orderRepository.save(order);
+    }
+
+    public Order declineOrder(String orderId, String sellerId) {
+        Order order = orderRepository.findById(orderId)
+                .orElseThrow(() -> new RuntimeException("Order not found"));
+        
+        if (!order.getSellerId().equals(sellerId)) {
+            throw new RuntimeException("Unauthorized: This order does not belong to you");
+        }
+        
+        order.setStatus("DECLINED");
+        order.setUpdatedAt(LocalDateTime.now());
+        return orderRepository.save(order);
+    }
+
+    public List<Order> getOrdersForSeller(String sellerId) {
+        return orderRepository.findBySellerIdOrderByCreatedAtDesc(sellerId);
+    }
+
+    public Order submitReview(String orderId, String buyerId, Integer rating, String comment) {
+        Order order = orderRepository.findById(orderId)
+                .orElseThrow(() -> new RuntimeException("Order not found"));
+        
+        if (!order.getBuyerId().equals(buyerId)) {
+            throw new RuntimeException("Unauthorized: You did not place this order");
+        }
+        
+        order.setRating(rating);
+        order.setReview(comment);
+        order.setUpdatedAt(LocalDateTime.now());
+        return orderRepository.save(order);
+    }
+
+    public Order editReview(String orderId, String buyerId, Integer rating, String comment) {
+        return submitReview(orderId, buyerId, rating, comment); // Same logic
+    }
+
+    public void deleteReview(String orderId, String buyerId) {
+        Order order = orderRepository.findById(orderId)
+                .orElseThrow(() -> new RuntimeException("Order not found"));
+        
+        if (!order.getBuyerId().equals(buyerId)) {
+            throw new RuntimeException("Unauthorized");
+        }
+        
+        order.setRating(null);
+        order.setReview(null);
+        order.setUpdatedAt(LocalDateTime.now());
+        orderRepository.save(order);
+    }
+
+    public SalesReportDTO getSalesReport(String sellerId, LocalDateTime start, LocalDateTime end) {
+        List<Order> orders = orderRepository.findBySellerIdOrderByCreatedAtDesc(sellerId).stream()
+                .filter(o -> o.getCreatedAt().isAfter(start) && o.getCreatedAt().isBefore(end))
+                .filter(o -> !"CANCELLED".equals(o.getStatus()) && !"DECLINED".equals(o.getStatus()))
+                .collect(Collectors.toList());
+
         BigDecimal totalRevenue = orders.stream()
                 .map(Order::getTotalPrice)
-                .filter(price -> price != null)
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
 
-        List<com.example.marketplace.dto.SalesReportDTO.OrderSummary> orderSummaries = orders.stream()
-                .map(order -> com.example.marketplace.dto.SalesReportDTO.OrderSummary.builder()
-                        .orderId(order.getId())
-                        .productName(order.getProductName())
-                        .quantity(order.getItems() != null && !order.getItems().isEmpty() 
-                                ? order.getItems().get(0).getQuantity() 
-                                : 0)
-                        .price(order.getItems() != null && !order.getItems().isEmpty() 
-                                ? order.getItems().get(0).getPrice() 
-                                : BigDecimal.ZERO)
-                        .totalPrice(order.getTotalPrice())
-                        .buyerName(order.getBuyerName())
-                        .status(order.getStatus())
-                        .dateCreated(order.getCreatedAt())
+        List<SalesReportDTO.OrderSummary> summaries = orders.stream()
+                .map(o -> SalesReportDTO.OrderSummary.builder()
+                        .orderId(o.getId())
+                        .productName(o.getProductName())
+                        .totalPrice(o.getTotalPrice())
+                        .buyerName(o.getBuyerName())
+                        .status(o.getStatus())
+                        .dateCreated(o.getCreatedAt())
                         .build())
-                .toList();
+                .collect(Collectors.toList());
 
-        return com.example.marketplace.dto.SalesReportDTO.builder()
-                .startDate(startDate)
-                .endDate(endDate)
+        return SalesReportDTO.builder()
+                .startDate(start)
+                .endDate(end)
                 .totalOrders(orders.size())
                 .totalRevenue(totalRevenue)
-                .orders(orderSummaries)
+                .orders(summaries)
                 .build();
     }
 }
-
